==> trung5522/tunePID_Drone/Core/Src/mpu.c <==
#include "main.h"
#include "mpu.h"
#include "stdio.h"
#include "math.h"
#include "string.h"
#include "stm32f4xx.h"

uint8_t setupMPU(MPU9250_t *MPU9250, uint8_t addr) {
        // addr should be valid for MPU
//	char badmpu1[] = "CHECK SETUP\n\r";
//	HAL_UART_Transmit(&huart6, badmpu1, strlen((char *)badmpu1), 0xFFFF);
        if ((addr>>1 < MPU9250_DEFAULT_ADDRESS) || (addr>>1 > MPU9250_DEFAULT_ADDRESS + 7)) {
//        	char badmpu[] = "Bad Address\n\r";
//        	HAL_UART_Transmit(&huart6, badmpu, strlen((char *)badmpu), 0xFFFF);
            return 0;
        }
        //mpu_i2c_addr = addr;
        //MPU9250SelfTest(&hi2c1, SelfTest);
        //calibrateMPU9250(&hi2c1, gyroBias, accelBias);
   		HAL_Delay(1000);

        if (isConnectedMPU9250(MPU9250)==1) {
        	MPU9250_Init(MPU9250);
            if (isConnectedAK8963(MPU9250)==1)
                initAK8963(MPU9250);
            else {
//            	char badmpu[] = "Check AK8963\n\r";
//            	HAL_UART_Transmit(&huart6, badmpu, strlen((char *)badmpu), 0xFFFF);
            	MPU9250->has_connected = 0;
                return 0;
            }
        } else {
//        	char badmpu[] = "Check MPU ADDRESS\n\r";
//        	HAL_UART_Transmit(&huart6, badmpu, strlen((char *)badmpu), 0xFFFF);
        	MPU9250->has_connected = 0;
            return 0;
        }
        MPU9250->has_connected = 1;
        return 1;
    }

uint8_t updateMPU(MPU9250_t *MPU9250){
	if (!(MPUavailable(MPU9250)==1)) return 0;

	        update_accel_gyro(MPU9250);
	        update_mag(MPU9250);

	        // Madgwick function needs to be fed North, East, and Down direction like
	        // (AN, AE, AD, GN, GE, GD, MN, ME, MD)
	        // Accel and Gyro direction is Right-Hand, X-Forward, Z-Up
	        // Magneto direction is Right-Hand, Y-Forward, Z-Down
	        // So to adopt to the general Aircraft coordinate system (Right-Hand, X-Forward, Z-Down),
	        // we need to feed (ax, -ay, -az, gx, -gy, -gz, my, -mx, mz)
	        // but we pass (-ax, ay, az, gx, -gy, -gz, my, -mx, mz)
	        // because gravity is by convention positive down, we need to ivnert the accel data

	        // get quaternion based on aircraft coordinate (Right-Hand, X-Forward, Z-Down)
	        // acc[mg], gyro[deg/s], mag [mG]
	        // gyro will be convert from [deg/s] to [rad/s] inside of this function
	        // quat_filter.update(-a[0], a[1], a[2], g[0] * DEG_TO_RAD, -g[1] * DEG_TO_RAD, -g[2] * DEG_TO_RAD, m[1], -m[0], m[2], q);

	        float an = -MPU9250->a[0];
	        float ae = +MPU9250->a[1];
	        float ad = +MPU9250->a[2];
	        float gn = +MPU9250->g[0] * DEG_TO_RAD;
	        float ge = -MPU9250->g[1] * DEG_TO_RAD;
	        float gd = -MPU9250->g[2] * DEG_TO_RAD;
	        float mn = +MPU9250->m[1];
	        float me = -MPU9250->m[0];
	        float md = +MPU9250->m[2];

	        for (size_t i = 0; i < MPU9250->n_filter_iter; ++i) {

	        	update_madgwick(an, ae, ad, gn, ge, gd, mn, me, md, MPU9250->q);
	        }


	        update_rpy(MPU9250, MPU9250->q[0], MPU9250->q[1], MPU9250->q[2], MPU9250->q[3]);

	        return 1;
}

void getMres(MPU9250_t *MPU9250) {
  switch (Mscale)
  {
 	// Possible magnetometer scales (and their register bit settings) are:
	// 14 bit resolution (0) and 16 bit resolution (1)
    case MFS_14BITS:
    	MPU9250->mag_resolution = 10.*4912./8190.; // Proper scale to return milliGauss
          break;
    case MFS_16BITS:
    	MPU9250->mag_resolution = 10.*4912./32760.0; // Proper scale to return milliGauss
          break;
  }
}

void getGres(MPU9250_t *MPU9250) {
  switch (Gscale)
  {
    // Possible gyro scales (and their register bit settings) are:
    // 250 DPS (00), 500 DPS (01), 1000 DPS (10), and 2000 DPS  (11).
        // Here's a bit of an algorith to calculate DPS/(ADC tick) based on that 2-bit value:
    case GFS_250DPS:
          MPU9250->gyro_resolution = 250.0/32768.0;
          break;
    case GFS_500DPS:
    	MPU9250->gyro_resolution = 500.0/32768.0;
          break;
    case GFS_1000DPS:
    	MPU9250->gyro_resolution = 1000.0/32768.0;
          break;
    case GFS_2000DPS:
    	MPU9250->gyro_resolution = 2000.0/32768.0;
          break;
  }
}

void getAres(MPU9250_t *MPU9250) {
  switch (Ascale)
  {
    // Possible accelerometer scales (and their register bit settings) are:
    // 2 Gs (00), 4 Gs (01), 8 Gs (10), and 16 Gs  (11).
        // Here's a bit of an algorith to calculate DPS/(ADC tick) based on that 2-bit value:
    case AFS_2G:
    	MPU9250->acc_resolution = 2.0/32768.0;
          break;
    case AFS_4G:
    	MPU9250->acc_resolution = 4.0/32768.0;
          break;
    case AFS_8G:
    	MPU9250->acc_resolution = 8.0/32768.0;
          break;
    case AFS_16G:
    	MPU9250->acc_resolution = 16.0/32768.0;
          break;
  }
}

char readByte(uint8_t I2C_ADDRESS, uint8_t RegAddr){
	char data[1];
	char data_write[1];
	data_write[0] = RegAddr;

	//Откуда будем считывать данные

	HAL_I2C_Master_Transmit(&hi2c1, I2C_ADDRESS, data_write, 1, 100);
	HAL_I2C_Master_Receive(&hi2c1, (uint16_t)I2C_ADDRESS, data, (uint16_t)1, (uint16_t)100);
	//HAL_I2C_Master_Transmit_DMA(&hi2c1, I2C_ADDRESS, data_write, 1);
	//HAL_I2C_Master_Receive_DMA(&hi2c1, (uint16_t)I2C_ADDRESS, data, (uint16_t)1);
	return data[0];

}

void readBytes(uint8_t I2C_ADDRESS, uint8_t RegAddr, uint8_t count, uint8_t * dest)
{
	char data[14];
	char data_write[1];
	data_write[0] = RegAddr;
	//Откуда будем считывать данные

	HAL_I2C_Master_Transmit(&hi2c1, I2C_ADDRESS, data_write, 1, 100);
	//HAL_I2C_Master_Transmit_DMA(&hi2c1, I2C_ADDRESS, data_write, 1);
	HAL_I2C_Master_Receive(&hi2c1, (uint16_t)(I2C_ADDRESS), data, count, (uint16_t)100);
	//HAL_I2C_Master_Receive_DMA(&hi2c1, (uint16_t)(I2C_ADDRESS), data, count);
	for(int ii = 0; ii < count; ii++) {
			dest[ii] = data[ii];
		}

}

void writeByte(uint8_t I2C_ADDRESS, uint8_t RegAddr, uint8_t data){
	char data_write[2];
	data_write[0] = RegAddr;
	data_write[1] = data;

	HAL_I2C_Master_Transmit(&hi2c1, I2C_ADDRESS, data_write, 2, 100);
	//HAL_I2C_Master_Receive_DMA(&hi2c1, I2C_ADDRESS, data_write, 2);
}
